--- a/Folder_monitor_template_karthick_dk.yaml
+++ b/Folder_monitor_template_karthick_dk.yaml
@@ -12,16 +12,15 @@ zabbix_export:
       items:
         - uuid: 46abfa59da6b4cdda2f3c839318807d8
           name: '{$FOLDER_NAME} : Space utilization'
-          key: 'vfs.dir.size[{$FOLDER_NAME},pused]'
-          value_type: FLOAT
+          key: 'vfs.dir.size[{$FOLDER_NAME},,pused,]'
           units: '%'
         - uuid: d2c674f92aad4dba888a5bff9f3d9b52
           name: '{$FOLDER_NAME} : Total space'
-          key: 'vfs.dir.size[{$FOLDER_NAME},total]'
+          key: 'vfs.dir.size[{$FOLDER_NAME},,total,]'
           units: B
         - uuid: e8aede2913ce4a358d7905d92e992b0e
           name: '{$FOLDER_NAME} : Used space'
-          key: 'vfs.dir.size[{$FOLDER_NAME},used]'
+          key: 'vfs.dir.size[{$FOLDER_NAME},,used,]'
           units: B
       tags:
         - tag: component
@@ -45,20 +44,20 @@ zabbix_export:
   triggers:
     - uuid: 18cab06ef09b426a889ab175fd5194fb
       expression: |
-        last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},pused])>{$VFS.FS.PUSED.MAX.CRIT:"{$FOLDER_NAME}"} and
-        ((last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},total])-last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},used]))<{$VFS.FS.FREE.MIN.CRIT:"{$FOLDER_NAME}"} or timeleft(/folder monitor/vfs.dir.size[{$FOLDER_NAME},pused],1h,100)<1d)
+        last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,pused,])>{$VFS.FS.PUSED.MAX.CRIT:"{$FOLDER_NAME}"} and
+        ((last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,total,])-last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,used,]))<{$VFS.FS.FREE.MIN.CRIT:"{$FOLDER_NAME}"} or timeleft(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,pused,],1h,100)<1d)
       recovery_mode: RECOVERY_EXPRESSION
-      recovery_expression: 'last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},used])<{$VFS.FS.PUSED.MAX.CRIT:"{$FOLDER_NAME}"}'
+      recovery_expression: 'last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,used,])<{$VFS.FS.PUSED.MAX.CRIT:"{$FOLDER_NAME}"}'
       name: '{$FOLDER_NAME}: Disk space is critically low'
       event_name: '{$FOLDER_NAME}: Disk space is critically low (used > {$VFS.FS.PUSED.MAX.CRIT:"{$FOLDER_NAME}"}%)'
       opdata: 'Space used: {ITEM.LASTVALUE3} of {ITEM.LASTVALUE2} ({ITEM.LASTVALUE1})'
       priority: HIGH
     - uuid: 6776a72a7e4344119fbc135b01b27650
       expression: |
-        last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},pused])>{$VFS.FS.PUSED.MAX.WARN:"{$FOLDER_NAME}"} and
-        ((last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},total])-last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},used]))<{$VFS.FS.FREE.MIN.WARN:"{$FOLDER_NAME}"} or timeleft(/folder monitor/vfs.dir.size[{$FOLDER_NAME},pused],1h,100)<1d)
+        last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,pused,])>{$VFS.FS.PUSED.MAX.WARN:"{$FOLDER_NAME}"} and
+        ((last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,total,])-last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,used,]))<{$VFS.FS.FREE.MIN.WARN:"{$FOLDER_NAME}"} or timeleft(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,pused,],1h,100)<1d)
       recovery_mode: RECOVERY_EXPRESSION
-      recovery_expression: 'last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},used])<{$VFS.FS.PUSED.MAX.WARN:"{$FOLDER_NAME}"}'
+      recovery_expression: 'last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,used,])<{$VFS.FS.PUSED.MAX.WARN:"{$FOLDER_NAME}"}'
       name: '{$FOLDER_NAME}: Disk space is low'
       event_name: '{$FOLDER_NAME}: Disk space is low (used > {$VFS.FS.PUSED.MAX.WARN:"{$FOLDER_NAME}"}%)'
       opdata: 'Space used: {ITEM.LASTVALUE3} of {ITEM.LASTVALUE2} ({ITEM.LASTVALUE1})'
@@ -71,9 +70,9 @@ zabbix_export:
       dependencies:
         - name: '{$FOLDER_NAME}: Disk space is critically low'
           expression: |
-            last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},pused])>{$VFS.FS.PUSED.MAX.CRIT:"{$FOLDER_NAME}"} and
-            ((last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},total])-last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},used]))<{$VFS.FS.FREE.MIN.CRIT:"{$FOLDER_NAME}"} or timeleft(/folder monitor/vfs.dir.size[{$FOLDER_NAME},pused],1h,100)<1d)
-          recovery_expression: 'last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},used])<{$VFS.FS.PUSED.MAX.CRIT:"{$FOLDER_NAME}"}'
+            last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,pused,])>{$VFS.FS.PUSED.MAX.CRIT:"{$FOLDER_NAME}"} and
+            ((last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,total,])-last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,used,]))<{$VFS.FS.FREE.MIN.CRIT:"{$FOLDER_NAME}"} or timeleft(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,pused,],1h,100)<1d)
+          recovery_expression: 'last(/folder monitor/vfs.dir.size[{$FOLDER_NAME},,used,])<{$VFS.FS.PUSED.MAX.CRIT:"{$FOLDER_NAME}"}'
   graphs:
     - uuid: 35e922bc2d08434fab41d51e6bb35638
       name: '{$FOLDER_NAME}: Disk space usage'
@@ -84,10 +83,10 @@ zabbix_export:
           calc_fnc: ALL
           item:
             host: 'folder monitor'
-            key: 'vfs.dir.size[{$FOLDER_NAME},total]'
+            key: 'vfs.dir.size[{$FOLDER_NAME},,total,]'
         - sortorder: '1'
           color: 66BB6A
           calc_fnc: ALL
           item:
             host: 'folder monitor'
-            key: 'vfs.dir.size[{$FOLDER_NAME},used]'
+            key: 'vfs.dir.size[{$FOLDER_NAME},,used,]'
